Update generated content

--- a/home.html
+++ b/home.html
@@ -260,33 +260,6 @@
     ]
   },
   {
-    "title": "VinFast và ngân hàng Indonesia thúc đẩy giao thông điện hóa",
-    "content": "VinFast, hãng xe điện Việt Nam, đã ký kết hợp tác với ngân hàng Bank Negara Indonesia (BNI) để phát triển hệ sinh thái xe điện tại Indonesia. Lễ ký kết diễn ra trong khuôn khổ buổi đối thoại kinh doanh Việt Nam – Indonesia, với mục tiêu thúc đẩy chuyển đổi sang xe xanh và phát triển bền vững. BNI sẽ hỗ trợ VinFast trong việc cung cấp các giải pháp tài chính và tư vấn nhằm khuyến khích người dân Indonesia sử dụng xe điện. Cả hai bên đều cam kết triển khai các chiến dịch nâng cao nhận thức về giao thông xanh và phát triển các sản phẩm xe điện tại thị trường này.",
-    "link": "https://vnexpress.net/vinfast-va-ngan-hang-indonesia-thuc-day-giao-thong-dien-hoa-4861020.html",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 9,
-    "question": "VinFast và ngân hàng nào đã ký hợp tác để phát triển giao thông điện hóa tại Indonesia?",
-    "answers": [
-      {
-        "text": "Bank Negara Indonesia (BNI)",
-        "correct": true
-      },
-      {
-        "text": "Ngân hàng Trung ương Indonesia",
-        "correct": false
-      },
-      {
-        "text": "Ngân hàng Thế giới",
-        "correct": false
-      },
-      {
-        "text": "Ngân hàng Phát triển Châu Á",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Amorim: 'Man Utd bị Ratcliffe chê là đúng'",
     "content": "HLV Ruben Amorim của Man Utd đã thừa nhận rằng ông và đội bóng không đạt phong độ tốt trong mùa giải này, sau khi bị đồng sở hữu Jim Ratcliffe chỉ trích. Ratcliffe cho rằng nhiều cầu thủ của Man Utd nhận lương cao nhưng không đủ chất lượng để thi đấu hiệu quả. Amorim cũng cho biết ông không phàn nàn về những bình luận của Ratcliffe và cam kết sẽ cải thiện kết quả của đội bóng.",
     "link": "https://vnexpress.net/amorim-man-utd-bi-ratcliffe-che-la-dung-4860857.html",
@@ -309,6 +282,33 @@
       },
       {
         "text": "Ông khẳng định rằng Man Utd đang có phong độ tốt.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "VinFast và ngân hàng Indonesia thúc đẩy giao thông điện hóa",
+    "content": "VinFast, hãng xe điện Việt Nam, đã ký kết hợp tác với ngân hàng Bank Negara Indonesia (BNI) để phát triển hệ sinh thái xe điện tại Indonesia. Lễ ký kết diễn ra trong khuôn khổ buổi đối thoại kinh doanh Việt Nam – Indonesia, với mục tiêu thúc đẩy chuyển đổi sang xe xanh và phát triển bền vững. BNI sẽ hỗ trợ VinFast trong việc cung cấp các giải pháp tài chính và tư vấn nhằm khuyến khích người dân Indonesia sử dụng xe điện. Cả hai bên đều cam kết triển khai các chiến dịch nâng cao nhận thức về giao thông xanh và phát triển các sản phẩm xe điện tại thị trường này.",
+    "link": "https://vnexpress.net/vinfast-va-ngan-hang-indonesia-thuc-day-giao-thong-dien-hoa-4861020.html",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "VinFast và ngân hàng nào đã ký hợp tác để phát triển giao thông điện hóa tại Indonesia?",
+    "answers": [
+      {
+        "text": "Bank Negara Indonesia (BNI)",
+        "correct": true
+      },
+      {
+        "text": "Ngân hàng Trung ương Indonesia",
+        "correct": false
+      },
+      {
+        "text": "Ngân hàng Thế giới",
+        "correct": false
+      },
+      {
+        "text": "Ngân hàng Phát triển Châu Á",
         "correct": false
       }
     ]
@@ -588,32 +588,28 @@
     ]
   },
   {
-    "title": "Sở VH&TT phản hồi sau loạt bài Xiếc của Dân trí, kỳ vọng rạp xiếc 1.400 tỷ",
-    "content": "Sở Văn hóa và Thể thao TPHCM đã có phản hồi tích cực trước loạt bài viết của Dân trí về nghệ thuật xiếc, đặc biệt là thành công của vở xiếc \"Vùng đất kỳ bí\". Sở khẳng định đang đầu tư mạnh mẽ vào nghệ thuật xiếc để phát triển thương hiệu văn hóa của thành phố, đồng thời dự án Rạp Xiếc và Biểu diễn đa năng Phú Thọ với tổng vốn gần 1.400 tỷ đồng cũng đang được triển khai. Dự kiến, rạp sẽ khánh thành vào dịp kỷ niệm 50 năm ngày giải phóng miền Nam, thống nhất đất nước.",
-    "link": "https://dantri.com.vn/giai-tri/so-vhtt-phan-hoi-sau-loat-bai-xiec-cua-dan-tri-ky-vong-rap-xiec-1400-ty-20250313155200365.htm",
+    "title": "Sở VH&TT phản hồi sau loạt bài của Dân trí, kỳ vọng rạp xiếc 1.400 tỷ",
+    "content": "Sở Văn hóa và Thể thao TPHCM đã có phản hồi tích cực về loạt bài của Dân trí, ghi nhận sự phát triển mạnh mẽ của ngành xiếc thành phố, đặc biệt là vở diễn \"Vùng đất kỳ bí\". Sở cam kết sẽ đầu tư mạnh mẽ vào nghệ thuật xiếc, bao gồm việc xây dựng Rạp Xiếc và Biểu diễn đa năng Phú Thọ với tổng vốn đầu tư gần 1.400 tỷ đồng. Dự án này được kỳ vọng sẽ là một thiết chế văn hóa quan trọng, góp phần thúc đẩy sự phát triển của nghệ thuật xiếc tại TPHCM.",
+    "link": "https://dantri.com.vn/giai-tri/so-vhtt-phan-hoi-sau-loat-bai-cua-dan-tri-ky-vong-rap-xiec-1400-ty-20250313155200365.htm",
     "cat": "giai-tri",
     "positivity": 8,
-    "importance": 7,
-    "question": "Sở VH&TT TPHCM có những kế hoạch gì cho nghệ thuật xiếc trong tương lai?",
+    "importance": 9,
+    "question": "Sở VH&TT TPHCM có kế hoạch gì cho rạp xiếc 1.400 tỷ đồng?",
     "answers": [
       {
-        "text": "Đầu tư xây dựng Rạp Xiếc và Biểu diễn đa năng Phú Thọ",
+        "text": "Xây dựng Rạp Xiếc và Biểu diễn đa năng Phú Thọ",
         "correct": true
       },
       {
-        "text": "Giảm ngân sách cho nghệ thuật",
+        "text": "Giảm đầu tư cho nghệ thuật xiếc",
         "correct": false
       },
       {
-        "text": "Tăng cường xuất khẩu nghệ thuật xiếc",
+        "text": "Chuyển đổi công năng rạp xiếc thành trung tâm thương mại",
         "correct": false
       },
       {
-        "text": "Thay đổi hoàn toàn đội ngũ nghệ sĩ",
-        "correct": false
-      },
-      {
-        "text": "Ngừng hỗ trợ nghệ sĩ trẻ",
+        "text": "Dừng hoạt động nghệ thuật xiếc tại TPHCM",
         "correct": false
       }
     ]
