Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,37 @@
     */
     const newsData = [
   {
+    "title": "Lãnh 12 năm tù vì chiếm đoạt hơn 4 tỉ đồng của hụi viên",
+    "content": "Phan Thị Diệu Ái, 28 tuổi, đã bị Tòa án nhân dân tỉnh Trà Vinh tuyên phạt 12 năm tù vì tội lừa đảo chiếm đoạt tài sản. Từ tháng 10/2021 đến tháng 7/2023, Ái đã lập ra nhiều dây hụi khống và tự ý lấy tên hụi viên để hốt hụi, chiếm đoạt tổng số tiền lên đến hơn 4 tỉ đồng. Hành vi của Ái đã gây thiệt hại lớn cho nhiều hụi viên tham gia.",
+    "link": "https://tuoitre.vn/lanh-12-nam-tu-vi-chiem-doat-hon-4-ti-dong-cua-hui-vien-20250313190531719.htm",
+    "cat": "phap-luat",
+    "positivity": 1,
+    "importance": 8,
+    "question": "Phan Thị Diệu Ái bị tuyên án bao nhiêu năm tù?",
+    "answers": [
+      {
+        "text": "12 năm",
+        "correct": true
+      },
+      {
+        "text": "10 năm",
+        "correct": false
+      },
+      {
+        "text": "15 năm",
+        "correct": false
+      },
+      {
+        "text": "5 năm",
+        "correct": false
+      },
+      {
+        "text": "20 năm",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Thủ môn Đình Triệu đau lưng, Bùi Hoàng Việt Anh rời tuyển Việt Nam",
     "content": "Đội tuyển Việt Nam đang gặp khó khăn về nhân sự khi thủ môn Nguyễn Đình Triệu bị đau lưng và trung vệ Bùi Hoàng Việt Anh tái phát chấn thương đầu gối. Do đó, Bùi Hoàng Việt Anh đã trở về CLB và HLV Kim Sang-sik quyết định gọi bổ sung thủ môn Trịnh Xuân Hoàng từ Thanh Hoá. Đình Triệu sẽ được chụp MRI vào ngày 14/3 để đánh giá mức độ chấn thương của mình.",
     "link": "https://vnexpress.net/thu-mon-dinh-trieu-dau-lung-bui-hoang-viet-anh-roi-tuyen-viet-nam-4861043.html",
