Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,37 @@
     */
     const newsData = [
   {
+    "title": "Tăng lợi nhuận, giảm phát thải cho nông dân nhờ tưới tiêu bằng năng lượng mặt trời",
+    "content": "Giải pháp tưới tiêu bằng năng lượng mặt trời do start-up Agros giới thiệu giúp nông dân Việt Nam tăng lợi nhuận và giảm chi phí nhiên liệu. Bằng cách áp dụng công nghệ này, nông dân có thể tiết kiệm chi phí cho máy bơm diesel và điện, đồng thời góp phần giảm phát thải khí nhà kính. Giải pháp đã được triển khai thành công ở nhiều quốc gia Đông Nam Á và dự kiến sẽ mang lại lợi ích tương tự cho hơn 6.000 nông hộ ở Việt Nam.",
+    "link": "https://tuoitre.vn/tang-loi-nhuan-giam-phat-thai-cho-nong-dan-nho-tuoi-tieu-bang-nang-luong-mat-troi-20250313190424217.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Giải pháp nào giúp nông dân tăng lợi nhuận và giảm phát thải?",
+    "answers": [
+      {
+        "text": "Tưới tiêu bằng năng lượng mặt trời",
+        "correct": true
+      },
+      {
+        "text": "Tưới tiêu bằng diesel",
+        "correct": false
+      },
+      {
+        "text": "Tưới tiêu bằng điện",
+        "correct": false
+      },
+      {
+        "text": "Tưới tiêu bằng nước mưa",
+        "correct": false
+      },
+      {
+        "text": "Tưới tiêu bằng phương pháp thủ công",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Lãnh 12 năm tù vì chiếm đoạt hơn 4 tỉ đồng của hụi viên",
     "content": "Phan Thị Diệu Ái, 28 tuổi, đã bị Tòa án nhân dân tỉnh Trà Vinh tuyên phạt 12 năm tù vì tội lừa đảo chiếm đoạt tài sản. Từ tháng 10/2021 đến tháng 7/2023, Ái đã lập ra nhiều dây hụi khống và tự ý lấy tên hụi viên để hốt hụi, chiếm đoạt tổng số tiền lên đến hơn 4 tỉ đồng. Hành vi của Ái đã gây thiệt hại lớn cho nhiều hụi viên tham gia.",
     "link": "https://tuoitre.vn/lanh-12-nam-tu-vi-chiem-doat-hon-4-ti-dong-cua-hui-vien-20250313190531719.htm",
@@ -641,33 +672,6 @@
     ]
   },
   {
-    "title": "VinFast và ngân hàng Indonesia thúc đẩy giao thông điện hóa",
-    "content": "VinFast, hãng xe điện Việt Nam, đã ký kết hợp tác với ngân hàng Bank Negara Indonesia (BNI) để phát triển hệ sinh thái xe điện tại Indonesia. Lễ ký kết diễn ra trong khuôn khổ buổi đối thoại kinh doanh Việt Nam – Indonesia, với mục tiêu thúc đẩy chuyển đổi sang xe xanh và phát triển bền vững. BNI sẽ hỗ trợ VinFast trong việc cung cấp các giải pháp tài chính và tư vấn nhằm khuyến khích người dân Indonesia sử dụng xe điện. Cả hai bên đều cam kết triển khai các chiến dịch nâng cao nhận thức về giao thông xanh và phát triển các sản phẩm xe điện tại thị trường này.",
-    "link": "https://vnexpress.net/vinfast-va-ngan-hang-indonesia-thuc-day-giao-thong-dien-hoa-4861020.html",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 9,
-    "question": "VinFast và ngân hàng nào đã ký hợp tác để phát triển giao thông điện hóa tại Indonesia?",
-    "answers": [
-      {
-        "text": "Bank Negara Indonesia (BNI)",
-        "correct": true
-      },
-      {
-        "text": "Ngân hàng Trung ương Indonesia",
-        "correct": false
-      },
-      {
-        "text": "Ngân hàng Thế giới",
-        "correct": false
-      },
-      {
-        "text": "Ngân hàng Phát triển Châu Á",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Ronaldo bị hắt hủi trong cuộc đua Chủ tịch",
     "content": "Cựu danh thủ Ronaldo Nazario đã rút lui khỏi cuộc đua tranh chức Chủ tịch LĐBĐ Brazil (CBF) do không nhận được sự ủng hộ từ các địa phương. Mặc dù ông đã tuyên bố tranh cử từ tháng 12/2024 với mong muốn khôi phục uy tín cho bóng đá Brazil, nhưng chỉ có 4 trong 27 Liên đoàn địa phương ủng hộ ông. Với quyết định này, Rodrigues có khả năng trở thành ứng cử viên duy nhất trong cuộc bầu cử sắp tới.",
     "link": "https://vnexpress.net/ronaldo-bi-hat-hui-trong-cuoc-dua-chu-tich-4860872.html",
@@ -690,6 +694,33 @@
       },
       {
         "text": "Vì ông đã đạt được nhiều thành công trong sự nghiệp",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "VinFast và ngân hàng Indonesia thúc đẩy giao thông điện hóa",
+    "content": "VinFast, hãng xe điện Việt Nam, đã ký kết hợp tác với ngân hàng Bank Negara Indonesia (BNI) để phát triển hệ sinh thái xe điện tại Indonesia. Lễ ký kết diễn ra trong khuôn khổ buổi đối thoại kinh doanh Việt Nam – Indonesia, với mục tiêu thúc đẩy chuyển đổi sang xe xanh và phát triển bền vững. BNI sẽ hỗ trợ VinFast trong việc cung cấp các giải pháp tài chính và tư vấn nhằm khuyến khích người dân Indonesia sử dụng xe điện. Cả hai bên đều cam kết triển khai các chiến dịch nâng cao nhận thức về giao thông xanh và phát triển các sản phẩm xe điện tại thị trường này.",
+    "link": "https://vnexpress.net/vinfast-va-ngan-hang-indonesia-thuc-day-giao-thong-dien-hoa-4861020.html",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "VinFast và ngân hàng nào đã ký hợp tác để phát triển giao thông điện hóa tại Indonesia?",
+    "answers": [
+      {
+        "text": "Bank Negara Indonesia (BNI)",
+        "correct": true
+      },
+      {
+        "text": "Ngân hàng Trung ương Indonesia",
+        "correct": false
+      },
+      {
+        "text": "Ngân hàng Thế giới",
+        "correct": false
+      },
+      {
+        "text": "Ngân hàng Phát triển Châu Á",
         "correct": false
       }
     ]
@@ -726,28 +757,28 @@
     ]
   },
   {
-    "title": "Đối thủ của Việt Nam triệu tập lão tướng từng đá La Liga",
-    "content": "Đội tuyển Malaysia đã công bố danh sách cầu thủ triệu tập cho vòng loại cuối Asian Cup 2027, trong đó có sự xuất hiện bất ngờ của tiền vệ 39 tuổi Natxo Insa. Insa, người có kinh nghiệm thi đấu tại La Liga, đã thi đấu cho CLB Johor Darul Tazim ở Malaysia từ năm 2017. Dưới sự dẫn dắt của HLV Peter Cklamovski, đội tuyển Malaysia cũng chào đón sự trở lại của tiền đạo Faisal Halim sau chấn thương nặng.",
-    "link": "https://vnexpress.net/doi-thu-cua-viet-nam-trieu-tap-lao-tuong-tung-da-la-liga-4861024.html",
+    "title": "Malaysia triệu tập lão tướng từng đá La Liga",
+    "content": "Đội tuyển Malaysia vừa công bố danh sách triệu tập cho vòng loại cuối Asian Cup 2027, trong đó có sự trở lại của tiền vệ 39 tuổi Natxo Insa, cầu thủ từng thi đấu tại La Liga. Insa, người gốc Tây Ban Nha, đã có kinh nghiệm thi đấu ở nhiều câu lạc bộ nổi tiếng và hiện đang chơi cho Johor Darul Tazim tại Malaysia. Sự góp mặt của Insa gây bất ngờ cho truyền thông vì tuổi tác và phong độ không ổn định trong quá khứ. Ngoài ra, Malaysia cũng chào đón sự trở lại của tiền đạo Faisal Halim sau chấn thương nặng.",
+    "link": "https://vnexpress.net/malaysia-trieu-tap-lao-tuong-tung-da-la-liga-4861024.html",
     "cat": "the-thao",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Natxo Insa là cầu thủ nào trong đội tuyển Malaysia?",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Tại sao Natxo Insa được triệu tập vào đội tuyển Malaysia?",
     "answers": [
       {
-        "text": "Tiền vệ 39 tuổi từng đá La Liga",
+        "text": "Vì anh có kinh nghiệm thi đấu tại La Liga và đang chơi cho Johor Darul Tazim.",
         "correct": true
       },
       {
-        "text": "Hậu vệ trẻ mới 18 tuổi",
+        "text": "Vì anh là cầu thủ trẻ nhất trong đội.",
         "correct": false
       },
       {
-        "text": "Thủ môn quốc dân",
+        "text": "Vì anh đã ghi nhiều bàn thắng ở mùa giải trước.",
         "correct": false
       },
       {
-        "text": "Tiền đạo đang thi đấu tại châu Âu",
+        "text": "Vì anh có quốc tịch Malaysia từ bà ngoại.",
         "correct": false
       }
     ]
