Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Tiến Linh: 'Chúng tôi sẽ gánh phần của Xuân Son'",
+    "content": "Tiến Linh, cầu thủ Quả Bóng Vàng Việt Nam, khẳng định đội tuyển sẽ nỗ lực để bù đắp cho sự vắng mặt của Nguyễn Xuân Son trong các trận đấu sắp tới với Campuchia và Lào. Mặc dù vừa gặp chấn thương gối, Tiến Linh vẫn tham gia tập luyện và tự tin rằng anh sẽ kịp hồi phục để thi đấu. Anh cho biết sự thiếu hụt của Xuân Son là một tổn thất lớn, nhưng toàn đội đang có tinh thần tốt và quyết tâm đạt được mục tiêu vượt qua vòng loại Asian Cup 2027.",
+    "link": "https://vnexpress.net/tien-linh-chung-toi-se-ganh-phan-cua-xuan-son-4861046.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tiến Linh đã nói gì về sự vắng mặt của Nguyễn Xuân Son?",
+    "answers": [
+      {
+        "text": "Chúng tôi sẽ gánh phần của cậu ấy ở đội tuyển.",
+        "correct": true
+      },
+      {
+        "text": "Chúng tôi không thể thi đấu tốt mà không có cậu ấy.",
+        "correct": false
+      },
+      {
+        "text": "Chúng tôi sẽ tìm kiếm cầu thủ khác thay thế.",
+        "correct": false
+      },
+      {
+        "text": "Chúng tôi sẽ cố gắng nhưng không chắc có thể thắng.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "‘Mr Thanh Lawyer’ mở văn phòng luật sư làm bình phong thực hiện 20 vụ lừa",
     "content": "Nguyễn Hữu Thạnh, 34 tuổi, đã mở văn phòng luật sư ảo tại Đà Nẵng nhằm lừa đảo chiếm đoạt tài sản của nhiều người. Thạnh đã đóng giả luật sư, thực hiện 20 vụ lừa đảo với tổng số tiền chiếm đoạt lên tới hơn 14,4 tỉ đồng, chủ yếu thông qua việc cam kết đưa người Việt Nam đi xuất khẩu lao động và di trú tại Canada. Sau khi bị phát hiện, Thạnh đã bị bắt giữ và đang trong quá trình xét xử.",
     "link": "https://tuoitre.vn/mr-thanh-lawyer-mo-van-phong-luat-su-lam-binh-phong-thuc-hien-20-vu-lua-20250313161503904.htm",
@@ -174,6 +201,37 @@
     ]
   },
   {
+    "title": "Hơn 37% học sinh TP HCM thừa cân béo phì",
+    "content": "Dữ liệu từ Sở Y tế TP HCM cho thấy hơn 37% học sinh tại thành phố đang trong tình trạng thừa cân hoặc béo phì. Hơn 101.000 học sinh thừa cân và hơn 84.000 học sinh béo phì được ghi nhận, cho thấy tỷ lệ này ngày càng gia tăng. Nguyên nhân chính được xác định là do sự đô thị hóa, thay đổi môi trường thực phẩm và lối sống ít vận động. TP HCM đặt ra mục tiêu giảm tỷ lệ thừa cân béo phì ở trẻ em xuống dưới 14% vào năm 2030.",
+    "link": "https://vnexpress.net/hon-37-hoc-sinh-tp-hcm-thua-can-beo-phi-4860969.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Tỷ lệ học sinh thừa cân béo phì ở TP HCM hiện tại là bao nhiêu?",
+    "answers": [
+      {
+        "text": "Hơn 37%",
+        "correct": true
+      },
+      {
+        "text": "Dưới 20%",
+        "correct": false
+      },
+      {
+        "text": "Khoảng 25%",
+        "correct": false
+      },
+      {
+        "text": "Hơn 50%",
+        "correct": false
+      },
+      {
+        "text": "Dưới 15%",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Lãnh 12 năm tù vì chiếm đoạt hơn 4 tỉ đồng của hụi viên",
     "content": "Phan Thị Diệu Ái, 28 tuổi, đã bị Tòa án nhân dân tỉnh Trà Vinh tuyên phạt 12 năm tù vì tội lừa đảo chiếm đoạt tài sản. Từ tháng 10/2021 đến tháng 7/2023, Ái đã lập ra nhiều dây hụi khống và tự ý lấy tên hụi viên để hốt hụi, chiếm đoạt tổng số tiền lên đến hơn 4 tỉ đồng. Hành vi của Ái đã gây thiệt hại lớn cho nhiều hụi viên tham gia.",
     "link": "https://tuoitre.vn/lanh-12-nam-tu-vi-chiem-doat-hon-4-ti-dong-cua-hui-vien-20250313190531719.htm",
@@ -200,6 +258,33 @@
       },
       {
         "text": "20 năm",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đăk Lăk kiểm tra chất lượng 'kẹo rau củ'",
+    "content": "Ngày 13/3/2025, Thanh tra Sở Y tế Đắk Lắk đã tiến hành kiểm tra chất lượng sản phẩm kẹo rau củ Supergreens Gummies của Công ty Cổ phần ASIA LIFE. Mẫu sản phẩm này đã được gửi đến Viện Kiểm nghiệm An toàn Vệ sinh Thực phẩm Quốc gia để kiểm tra, do có thông tin quảng cáo gây hiểu lầm rằng một viên kẹo có thể thay thế một đĩa rau xanh. Kết quả kiểm tra trước đó cho thấy hàm lượng chất xơ trong kẹo thấp hơn nhiều so với quảng cáo.",
+    "link": "https://vnexpress.net/dak-lak-kiem-tra-chat-luong-keo-rau-cu-4861010.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Tại sao Đắk Lắk kiểm tra chất lượng 'kẹo rau củ'?",
+    "answers": [
+      {
+        "text": "Vì thông tin quảng cáo sản phẩm gây hiểu lầm.",
+        "correct": true
+      },
+      {
+        "text": "Sản phẩm không được sản xuất tại Đắk Lắk.",
+        "correct": false
+      },
+      {
+        "text": "Công ty không có giấy phép kinh doanh.",
+        "correct": false
+      },
+      {
+        "text": "Sản phẩm bị thu hồi trên thị trường.",
         "correct": false
       }
     ]
@@ -262,6 +347,114 @@
       },
       {
         "text": "Vì không được triệu tập.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hiểu nhầm về tiêm vaccine HPV cho nữ giới",
+    "content": "Bài viết làm rõ những hiểu nhầm phổ biến về tiêm vaccine HPV cho nữ giới. Nhiều người cho rằng chỉ cần quan hệ chung thủy hoặc đã nhiễm HPV thì không cần tiêm phòng, nhưng thực tế virus HPV có thể lây qua nhiều cách và có nhiều chủng khác nhau. Bác sĩ khuyến cáo rằng việc tiêm vaccine HPV là rất quan trọng để phòng ngừa các bệnh liên quan và nên được thực hiện càng sớm càng tốt, đặc biệt cho nữ giới từ 27 tuổi trở lên.",
+    "link": "https://vnexpress.net/hieu-nham-ve-tiem-vaccine-hpv-cho-nu-gioi-4860700.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Tại sao nữ giới nên tiêm vaccine HPV?",
+    "answers": [
+      {
+        "text": "Để phòng ngừa nhiễm virus HPV và các bệnh liên quan.",
+        "correct": true
+      },
+      {
+        "text": "Vì tiêm vaccine là bắt buộc.",
+        "correct": false
+      },
+      {
+        "text": "Để giảm cân.",
+        "correct": false
+      },
+      {
+        "text": "Vaccine HPV chỉ dành cho nam giới.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "4 dưỡng chất tăng miễn dịch trẻ nên ăn mỗi ngày",
+    "content": "Bài viết nêu bật bốn dưỡng chất quan trọng giúp tăng cường hệ miễn dịch cho trẻ, bao gồm kẽm, vitamin C, chất chống oxy hóa và axit béo omega-3. Những dưỡng chất này giúp trẻ phát triển tốt, giảm nguy cơ mắc bệnh, đặc biệt là khi thời tiết thay đổi. Cha mẹ được khuyến khích cho trẻ ăn đa dạng thực phẩm chứa các chất dinh dưỡng này để hỗ trợ sức khỏe và đề kháng của trẻ.",
+    "link": "https://vnexpress.net/4-duong-chat-tang-mien-dich-tre-nen-an-moi-ngay-4860801.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Những dưỡng chất nào giúp tăng miễn dịch cho trẻ nên ăn mỗi ngày?",
+    "answers": [
+      {
+        "text": "Kẽm, vitamin C, chất chống oxy hóa, axit béo omega-3",
+        "correct": true
+      },
+      {
+        "text": "Chất xơ, đường, muối, protein",
+        "correct": false
+      },
+      {
+        "text": "Vitamin D, canxi, sắt, đồng",
+        "correct": false
+      },
+      {
+        "text": "Chất béo bão hòa, cholesterol, đường tinh luyện",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Người suy thận độ 3, 4 nên ăn uống thế nào?",
+    "content": "Bài viết cung cấp thông tin về chế độ dinh dưỡng cho người suy thận độ 3 và 4, nhấn mạnh rằng chế độ ăn uống của hai bệnh nhân này cần được điều chỉnh khác nhau. Người suy thận độ 3 có thể ăn uống thoải mái hơn, nhưng vẫn cần giảm đạm, muối và theo dõi sức khỏe. Ngược lại, người suy thận độ 4 cần tuân thủ chế độ ăn nghiêm ngặt hơn, bao gồm kiêng khem nhiều thực phẩm chứa kali và nước để tránh tình trạng nguy hiểm như tăng kali máu.",
+    "link": "https://vnexpress.net/nguoi-suy-than-do-3-4-nen-an-uong-the-nao-4860941.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 9,
+    "question": "Người suy thận độ 3 và 4 nên ăn uống như thế nào?",
+    "answers": [
+      {
+        "text": "Người suy thận độ 3 có chế độ ăn thoải mái hơn, trong khi người suy thận độ 4 cần kiêng khem nghiêm ngặt hơn.",
+        "correct": true
+      },
+      {
+        "text": "Người suy thận độ 3 và 4 có thể ăn chung thực đơn.",
+        "correct": false
+      },
+      {
+        "text": "Cả hai cần ăn nhiều thực phẩm chứa kali và nước.",
+        "correct": false
+      },
+      {
+        "text": "Người suy thận độ 4 nên ăn nhiều trái cây và rau quả.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Mặt mưng mủ sau cấy mỡ tạo 'má baby'",
+    "content": "Một phụ nữ 35 tuổi đã gặp phải tình trạng nhiễm trùng và mủ sau khi cấy mỡ tự thân vào má tại một spa. Các bác sĩ tại Bệnh viện Bạch Mai đã chẩn đoán và điều trị bằng kháng sinh cùng với việc dẫn lưu dịch mủ. Cơ sở y tế khuyến cáo mọi người chỉ nên thực hiện các thủ thuật thẩm mỹ tại những nơi được cấp phép để tránh nguy cơ biến chứng nguy hiểm.",
+    "link": "https://vnexpress.net/mat-mung-mu-sau-cay-mo-tao-ma-baby-4860892.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao người phụ nữ 35 tuổi phải nhập viện sau khi cấy mỡ?",
+    "answers": [
+      {
+        "text": "Vì bị nhiễm trùng và xuất hiện mủ dưới da.",
+        "correct": true
+      },
+      {
+        "text": "Vì gặp phải dị ứng với thuốc gây mê.",
+        "correct": false
+      },
+      {
+        "text": "Vì không thích kết quả thẩm mỹ.",
+        "correct": false
+      },
+      {
+        "text": "Vì cần phải nghỉ ngơi sau khi làm đẹp.",
         "correct": false
       }
     ]
@@ -1708,28 +1901,28 @@
     ]
   },
   {
-    "title": "Làm thế nào nhận biết rối loạn tiền đình?",
-    "content": "Rối loạn tiền đình là tình trạng liên quan đến thăng bằng, gây ra triệu chứng như choáng váng, hoa mắt. Các triệu chứng này có thể là dấu hiệu của nhiều bệnh khác nhau, bao gồm tim mạch và stress. Để chẩn đoán chính xác, người bệnh nên thăm khám tại bệnh viện chuyên khoa, nơi bác sĩ sẽ sử dụng công nghệ hiện đại như hệ thống Interacoustics để kiểm tra và xác định nguyên nhân gây ra tình trạng này.",
-    "link": "https://vnexpress.net/lam-the-nao-nhan-biet-roi-loan-tien-dinh-4860719.html",
+    "title": "Đau khớp háng có nên đi bộ?",
+    "content": "Đau khớp háng là vấn đề phổ biến ở người lớn tuổi, đặc biệt là những người bị thoái hóa khớp hoặc viêm khớp. Mặc dù nhiều người lo lắng rằng đi bộ có thể làm tăng cơn đau, nhưng nếu thực hiện đúng cách, đi bộ có thể mang lại nhiều lợi ích cho khớp háng và sức khỏe tổng thể. Đi bộ kích thích sản xuất dịch khớp, giúp khớp hoạt động linh hoạt hơn và hạn chế tình trạng cứng khớp. Tuy nhiên, nếu có các triệu chứng như đau dữ dội hoặc sưng, người bệnh nên ngừng đi bộ và tham khảo ý kiến bác sĩ.",
+    "link": "https://vnexpress.net/dau-khop-hang-co-nen-di-bo-4860837.html",
     "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Làm thế nào để nhận biết rối loạn tiền đình?",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Đau khớp háng có nên đi bộ không?",
     "answers": [
       {
-        "text": "Đi khám tại bệnh viện chuyên khoa Tai Mũi Họng hoặc Thần kinh.",
+        "text": "Có, đi bộ đúng cách có thể cải thiện triệu chứng.",
         "correct": true
       },
       {
-        "text": "Uống thuốc tự điều trị tại nhà.",
+        "text": "Không, đi bộ làm tình trạng bệnh nặng hơn.",
         "correct": false
       },
       {
-        "text": "Thực hiện bài tập thể dục hàng ngày.",
+        "text": "Có, nhưng chỉ nên đi bộ trên địa hình bằng phẳng.",
         "correct": false
       },
       {
-        "text": "Chỉ cần nghỉ ngơi và không làm gì cả.",
+        "text": "Không, đi bộ không có tác dụng gì đối với khớp háng.",
         "correct": false
       }
     ]
@@ -1766,28 +1959,28 @@
     ]
   },
   {
-    "title": "Đau khớp háng có nên đi bộ?",
-    "content": "Đau khớp háng là vấn đề phổ biến ở người lớn tuổi, đặc biệt là những người bị thoái hóa khớp hoặc viêm khớp. Mặc dù nhiều người lo lắng rằng đi bộ có thể làm tăng cơn đau, nhưng nếu thực hiện đúng cách, đi bộ có thể mang lại nhiều lợi ích cho khớp háng và sức khỏe tổng thể. Đi bộ kích thích sản xuất dịch khớp, giúp khớp hoạt động linh hoạt hơn và hạn chế tình trạng cứng khớp. Tuy nhiên, nếu có các triệu chứng như đau dữ dội hoặc sưng, người bệnh nên ngừng đi bộ và tham khảo ý kiến bác sĩ.",
-    "link": "https://vnexpress.net/dau-khop-hang-co-nen-di-bo-4860837.html",
+    "title": "Làm thế nào nhận biết rối loạn tiền đình?",
+    "content": "Rối loạn tiền đình là tình trạng liên quan đến thăng bằng, gây ra triệu chứng như choáng váng, hoa mắt. Các triệu chứng này có thể là dấu hiệu của nhiều bệnh khác nhau, bao gồm tim mạch và stress. Để chẩn đoán chính xác, người bệnh nên thăm khám tại bệnh viện chuyên khoa, nơi bác sĩ sẽ sử dụng công nghệ hiện đại như hệ thống Interacoustics để kiểm tra và xác định nguyên nhân gây ra tình trạng này.",
+    "link": "https://vnexpress.net/lam-the-nao-nhan-biet-roi-loan-tien-dinh-4860719.html",
     "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Đau khớp háng có nên đi bộ không?",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Làm thế nào để nhận biết rối loạn tiền đình?",
     "answers": [
       {
-        "text": "Có, đi bộ đúng cách có thể cải thiện triệu chứng.",
+        "text": "Đi khám tại bệnh viện chuyên khoa Tai Mũi Họng hoặc Thần kinh.",
         "correct": true
       },
       {
-        "text": "Không, đi bộ làm tình trạng bệnh nặng hơn.",
+        "text": "Uống thuốc tự điều trị tại nhà.",
         "correct": false
       },
       {
-        "text": "Có, nhưng chỉ nên đi bộ trên địa hình bằng phẳng.",
+        "text": "Thực hiện bài tập thể dục hàng ngày.",
         "correct": false
       },
       {
-        "text": "Không, đi bộ không có tác dụng gì đối với khớp háng.",
+        "text": "Chỉ cần nghỉ ngơi và không làm gì cả.",
         "correct": false
       }
     ]
