--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -3601,6 +3601,33 @@
     ]
   },
   {
+    "title": "Tranh luận đề xuất sinh con thứ hai được nghỉ 7 tháng",
+    "content": "Đề xuất tăng thời gian nghỉ thai sản lên 7 tháng cho phụ nữ sinh con thứ hai đang gây tranh luận trong xã hội Việt Nam. Nhiều lao động nữ bày tỏ lo ngại về khả năng mất việc làm hơn là việc được nghỉ dài hơn. Họ cho rằng việc tăng thời gian nghỉ không giải quyết được gốc rễ vấn đề mà họ đang đối mặt, như áp lực tài chính và khó khăn trong việc tìm việc làm. Các doanh nghiệp cũng lo ngại về ảnh hưởng của đề xuất này đến hoạt động sản xuất và tuyển dụng.",
+    "link": "https://vnexpress.net/tranh-luan-de-xuat-sinh-con-thu-hai-duoc-nghi-7-thang-4860053.html",
+    "cat": "gia-dinh",
+    "positivity": 5,
+    "importance": 8,
+    "question": "Đề xuất nghỉ thai sản 7 tháng có được ủng hộ không?",
+    "answers": [
+      {
+        "text": "Nhiều lao động nữ lo ngại về việc mất việc làm",
+        "correct": true
+      },
+      {
+        "text": "Tất cả mọi người đều ủng hộ",
+        "correct": false
+      },
+      {
+        "text": "Đề xuất này không có ý nghĩa gì",
+        "correct": false
+      },
+      {
+        "text": "Đề xuất chỉ được ủng hộ bởi doanh nghiệp",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bí quyết giúp mẹ ba con giảm 10 kg trong 90 ngày",
     "content": "Giang, 34 tuổi, đã giảm 10 kg trong 90 ngày nhờ vào chế độ ăn uống lành mạnh và tập luyện thể chất. Sau khi nhận thấy sự thay đổi tiêu cực về ngoại hình và sức khỏe, cô quyết định thay đổi lối sống bằng cách ăn đủ nhóm chất dinh dưỡng và tập luyện 5 ngày mỗi tuần. Kết quả, cân nặng của cô giảm từ 59 kg xuống còn 49 kg, vòng bụng thu gọn và sức khỏe được cải thiện rõ rệt. Giang hiện duy trì lối sống lành mạnh và cảm thấy tự tin hơn về bản thân.",
     "link": "https://vnexpress.net/bi-quyet-giup-me-ba-con-giam-10-kg-trong-90-ngay-4860179.html",
@@ -3627,33 +3654,6 @@
       },
       {
         "text": "150 ngày",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tranh luận đề xuất sinh con thứ hai được nghỉ 7 tháng",
-    "content": "Đề xuất tăng thời gian nghỉ thai sản lên 7 tháng cho phụ nữ sinh con thứ hai đang gây tranh luận trong xã hội Việt Nam. Nhiều lao động nữ bày tỏ lo ngại về khả năng mất việc làm hơn là việc được nghỉ dài hơn. Họ cho rằng việc tăng thời gian nghỉ không giải quyết được gốc rễ vấn đề mà họ đang đối mặt, như áp lực tài chính và khó khăn trong việc tìm việc làm. Các doanh nghiệp cũng lo ngại về ảnh hưởng của đề xuất này đến hoạt động sản xuất và tuyển dụng.",
-    "link": "https://vnexpress.net/tranh-luan-de-xuat-sinh-con-thu-hai-duoc-nghi-7-thang-4860053.html",
-    "cat": "gia-dinh",
-    "positivity": 5,
-    "importance": 8,
-    "question": "Đề xuất nghỉ thai sản 7 tháng có được ủng hộ không?",
-    "answers": [
-      {
-        "text": "Nhiều lao động nữ lo ngại về việc mất việc làm",
-        "correct": true
-      },
-      {
-        "text": "Tất cả mọi người đều ủng hộ",
-        "correct": false
-      },
-      {
-        "text": "Đề xuất này không có ý nghĩa gì",
-        "correct": false
-      },
-      {
-        "text": "Đề xuất chỉ được ủng hộ bởi doanh nghiệp",
         "correct": false
       }
     ]
@@ -3717,28 +3717,32 @@
     ]
   },
   {
-    "title": "9 vấn đề Man Utd đối mặt khi xây sân nhà mới",
-    "content": "Man Utd đang đối mặt với nhiều vấn đề khi xây dựng sân vận động mới 100.000 chỗ ngồi, bao gồm thời gian thi công, chi phí và ảnh hưởng đến kế hoạch chuyển nhượng. Dự án dự kiến sẽ hoàn thành trong 5 năm, mặc dù thông thường mất khoảng 10 năm. Có khả năng Old Trafford sẽ bị phá bỏ để xây dựng sân mới, và CLB đang tìm cách đảm bảo rằng việc xây dựng không cản trở việc đầu tư vào đội hình. Dự án này cũng hứa hẹn tạo ra hàng triệu việc làm và tăng cường du lịch cho khu vực.",
-    "link": "https://vnexpress.net/9-van-de-man-utd-doi-mat-khi-xay-san-nha-moi-4860575.html",
+    "title": "9 câu hỏi về dự án xây sân nhà mới của Man Utd",
+    "content": "Dự án xây dựng sân nhà mới của Manchester United có sức chứa 100.000 chỗ ngồi, dự kiến hoàn thành trong 5 năm, với chi phí khoảng 2 tỷ bảng. Sân mới sẽ được xây dựng chủ yếu tại một địa điểm khác trước khi lắp ghép tại khu vực Old Trafford hiện tại. Old Trafford có thể sẽ bị phá bỏ, và đội nữ của Man Utd có thể thi đấu tại sân mới. Dự án hứa hẹn tạo ra 92.000 việc làm mới và đóng góp lớn cho nền kinh tế Vương quốc Anh.",
+    "link": "https://vnexpress.net/9-cau-hoi-ve-du-an-xay-san-nha-moi-cua-man-utd-4860575.html",
     "cat": "the-thao",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Man Utd đang gặp những vấn đề gì khi xây sân vận động mới?",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Dự án sân nhà mới của Man Utd sẽ được hoàn thành trong bao lâu?",
     "answers": [
       {
-        "text": "Thời gian thi công, chi phí và ảnh hưởng đến chuyển nhượng.",
+        "text": "5 năm",
         "correct": true
       },
       {
-        "text": "Vấn đề về sức chứa sân đấu.",
+        "text": "10 năm",
         "correct": false
       },
       {
-        "text": "Khó khăn trong việc thiết kế kiến trúc.",
+        "text": "3 năm",
         "correct": false
       },
       {
-        "text": "Xây dựng không đủ chỗ cho người hâm mộ.",
+        "text": "8 năm",
+        "correct": false
+      },
+      {
+        "text": "12 năm",
         "correct": false
       }
     ]
@@ -3883,6 +3887,33 @@
     ]
   },
   {
+    "title": "Bỏ tập gym vì bị PT 'chèo kéo'",
+    "content": "Chị Ánh, 43 tuổi, đã bỏ tập gym sau khi bị huấn luyện viên cá nhân (PT) chèo kéo mua thực phẩm chức năng với giá cao, gây ức chế cho chị. Mặc dù đã chi hơn 50 triệu đồng cho gói tập, nhưng những lần áp lực mua hàng từ PT đã khiến chị quyết định ngừng tập luyện. Tình trạng tương tự cũng xảy ra với nhiều khách hàng khác, dẫn đến việc họ cảm thấy phiền phức và không hài lòng với dịch vụ. Các bác sĩ khuyến cáo rằng việc dùng thực phẩm chức năng không thể thay thế chế độ ăn uống và lối sống lành mạnh, và người tiêu dùng cần cẩn trọng khi chọn mua sản phẩm và dịch vụ.",
+    "link": "https://vnexpress.net/bo-tap-gym-vi-bi-pt-cheo-keo-4857898.html",
+    "cat": "suc-khoe",
+    "positivity": 2,
+    "importance": 7,
+    "question": "Tại sao chị Ánh quyết định bỏ tập gym?",
+    "answers": [
+      {
+        "text": "Vì bị PT chèo kéo mua thực phẩm chức năng",
+        "correct": true
+      },
+      {
+        "text": "Vì không thích tập luyện",
+        "correct": false
+      },
+      {
+        "text": "Vì sức khỏe không tốt",
+        "correct": false
+      },
+      {
+        "text": "Vì muốn tiết kiệm tiền",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Một ngày của cụ bà 97 tuổi mê chạy bộ",
     "content": "Cụ bà Nguyễn Thị Huynh, 97 tuổi, sống tại TP Hà Tĩnh, duy trì thói quen chạy bộ hai lần mỗi ngày. Hàng sáng, cụ dậy sớm để tập thể dục và ăn sáng đầy đủ trước khi tham gia các hoạt động khác. Dù tuổi cao, cụ vẫn tích cực tham gia các lớp thể dục tại phòng gym và thường xuyên chạy bộ quanh công viên. Cụ cũng được con cháu ghi lại những khoảnh khắc tập luyện và chia sẻ trên mạng xã hội, thu hút sự chú ý của nhiều người.",
     "link": "https://vnexpress.net/mot-ngay-cua-cu-ba-97-tuoi-me-chay-bo-4860200.html",
@@ -3909,33 +3940,6 @@
       },
       {
         "text": "92 tuổi",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bỏ tập gym vì bị PT 'chèo kéo'",
-    "content": "Chị Ánh, 43 tuổi, đã bỏ tập gym sau khi bị huấn luyện viên cá nhân (PT) chèo kéo mua thực phẩm chức năng với giá cao, gây ức chế cho chị. Mặc dù đã chi hơn 50 triệu đồng cho gói tập, nhưng những lần áp lực mua hàng từ PT đã khiến chị quyết định ngừng tập luyện. Tình trạng tương tự cũng xảy ra với nhiều khách hàng khác, dẫn đến việc họ cảm thấy phiền phức và không hài lòng với dịch vụ. Các bác sĩ khuyến cáo rằng việc dùng thực phẩm chức năng không thể thay thế chế độ ăn uống và lối sống lành mạnh, và người tiêu dùng cần cẩn trọng khi chọn mua sản phẩm và dịch vụ.",
-    "link": "https://vnexpress.net/bo-tap-gym-vi-bi-pt-cheo-keo-4857898.html",
-    "cat": "suc-khoe",
-    "positivity": 2,
-    "importance": 7,
-    "question": "Tại sao chị Ánh quyết định bỏ tập gym?",
-    "answers": [
-      {
-        "text": "Vì bị PT chèo kéo mua thực phẩm chức năng",
-        "correct": true
-      },
-      {
-        "text": "Vì không thích tập luyện",
-        "correct": false
-      },
-      {
-        "text": "Vì sức khỏe không tốt",
-        "correct": false
-      },
-      {
-        "text": "Vì muốn tiết kiệm tiền",
         "correct": false
       }
     ]
